OPTIMUS-36426 export changes from 57ef8d2c104b7e18b622b67bb63219a0749a7d4f